Mudanças no HTML, footer

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ src="https://www.google.com/maps/embed?pb=!4v1749074130072!6m8!1m7!1s5sLK6BwPlWo
     <div>
         <img src="./assets/image/logo.svg" alt="logo barbearia">
     </div>
-    <p>&#169; 2025 | Barber - Todos direitos reservados.</p>
+    <p>&#169; 2025 | Santiago Fernandes Gonçalves Barber - Todos direitos reservados.</p>
 </footer>
 <!--botão whatsapp-->
 <a href="https://api.whatsapp.com/send/?phone=5535997052536&text=Quero&fazer&um& orçamento..." class="btn-whatsapp"
